[project]
name = "nonebot-plugin-pjsk"
version = "0.2.9.post1"
description = "Project Sekai Sticker Creator for NoneBot2."
authors = [
    { name = "Agnes_Digital", email = "Z735803792@163.com" },
    { name = "student_2333", email = "lgc2333@126.com" },
]
dependencies = [
    "nonebot2>=2.0.0",
    "nonebot-plugin-send-anything-anywhere>=0.2.7",
    "pillow>=9,<10",
    "imagetext-py>=2.1.3",
    "aiohttp>=3.8.5",
    "numpy>=1.25.1",
    "anyio>=3.7.1",
]
requires-python = ">=3.9,<4.0"
keywords = ["pjsk", "nonebot2", "plugin"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/lgc-NB2Dev/nonebot-plugin-pjsk"

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
