[project]
name = "nonebot-plugin-pjsk"
dynamic = ["version"]
description = "Project Sekai Sticker Creator for NoneBot2."
authors = [
    { name = "Agnes_Digital", email = "Z735803792@163.com" },
    { name = "LgCookie", email = "lgc2333@126.com" },
]
dependencies = [
    "nonebot2>=2.3.1",
    "httpx>=0.27.0",
    "anyio>=4.4.0",
    "nonebot-plugin-alconna>=0.48.0",
    "nonebot-plugin-htmlrender>=0.3.2",
    "jinja2>=3.1.4",
    "yarl>=1.9.4",
]
requires-python = ">=3.9,<=4"
keywords = ["pjsk", "nonebot2", "plugin"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/lgc-NB2Dev/nonebot-plugin-pjsk"

[tool.pdm.build]
includes = []

[tool.pdm.version]
source = "file"
path = "nonebot_plugin_pjsk/__init__.py"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
